fixed the issue where text is right aligned because of the rtl in direction

--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -129,6 +129,7 @@
             grid-template-columns: 1fr 1fr;
             gap: var(--spacer-two);
             direction: rtl;
+            text-align: left;
         }
         
         &:nth-child(even) {
